# ts-teamtakt

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  discussion-analysis.md  pyproject.toml
backend/: .env.example  check_constraints.py  pyproject.toml  test_output.txt
backend/alembic/: env.py
backend/alembic/versions/: 21503dcbd174_drop_social_tables.py  273daa92457e_add_teams_channel_config_to_admin_.py  322820c1d61e_add_teams_post_records.py  3a8f2c1d9e47_task_dailyworklog_schema.py  94f7455afcb9_initial_schema.py  a1b2c3d4e5f6_work_types_task_model_cleanup.py  a4c9d2e7f831_add_task_insight_rename_work_note.py  a9e3b1c2d5f8_add_avatar_url_to_users.py  b1c4e7f2a935_add_local_login_fields_to_users.py  b2c3d4e5f6a7_rename_task_priority_values.py  b3d1e2f4a896_github_linked_project_schema.py  c5d2e9f4a071_rename_day_note_to_day_insight.py  d0b797503987_merge_github_project_and_oauth_heads.py  d7e3f9a2b564_drop_absence_tables.py  e1f2a3b4c5d6_add_github_oauth_columns_to_users.py  e2f4a6b8c0d1_absence_type_fk_table.py  f3a1c8e2b047_fibonacci_effort_and_energy_type.py  fcdd7f228503_add_check_and_send_tracking_to_daily_.py  g1h2i3j4k5l6_add_github_status_to_tasks.py  h2i3j4k5l6m7_widen_fibonacci_effort_story_points.py
backend/app/: config.py  main.py
backend/app/core/: deps.py  edit_window.py  oauth_state.py  scheduler.py  security.py  token_encryption.py  validators.py  visibility.py  working_days.py  ws_manager.py
backend/app/db/: engine.py  seed.py
backend/app/services/: github_autofill.py  github_projects.py  graph_auth.py  graph_mail.py  llm.py  (+2 more)
(+204 files in other folders)
